# django-mutpy

./: .pre-commit-config.yaml  README.rst  pyproject.toml
django_mutpy/: __init__.py
django_mutpy/management/commands/: muttest.py
