[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-mutpy"
version = "0.2.0"
description = "Mutation testing with MutPy for Django."
authors = ["Philipp Hossner", "Stef Gijsberts"]
license = "Apache 2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
mutpy = {path = "../mutpy"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
toml-sort = "^0.20.0"
pydocstyle = "^6.1.1"
pylint = "^2.13.5"
reorder-python-imports = "^3.0.1"
pre-commit = "^2.18.1"
